2006-03-02  Daniel Wagner  <wagi@monom.org>

	* configure.ac: bumb minor version to 0.4

	* src/libfreebobavc/avc_extended_cmd_generic.h: plugAddressPlugDirectionToString
	and plugAddressAddressModeToString added.
	* src/libfreebobavc/avc_extended_cmd_generic.cpp: Likewise.

	* src/avplug.h: Enum EAvPlugType renamed to EAvPlugAddressType.
	getPlugAddressType added. getPlugType returns now real plug type.
	(class AvPlugManager): getPlugByType added.

	* src/avdevice.h: getPlugByType added.
	* src/avdevice.cpp: Likewise.
	(discoverSyncModes): Use getPlugByType instead
	of hardcoded id to find sync plugs.

	* src/devicemanager.h: Verbose argument not in constructor
	instead in discover method.
	* src/devicemanager.cpp: Likewise.

	* libfreebob/freebob.h (freebob_discover_devices): Verbose argument
	added.
	* src/libfreebobstreaming/freebob_streaming.c: Likewise.
	* src/freebob.cpp: Likewise.
	* tests/test-freebob.c: Likewise.

2006-03-01  Daniel Wagner  <wagi@monom.org>

	* configure.ac: bumb minor version to 0.3

	* src/avdevice.cpp: Discover connections between plugs.
	* src/avdevice.h: Likewise.
	* src/avdevicesubunit.cpp: Likewise.
	* src/avdevicesubunit.h: Likewise.
	* src/avdevicexml.cpp: Likewise.
	* src/avplug.cpp: Likewise.
	* src/avplug.h: Likewise.
	* src/devicemanager.cpp: Likewise.
	* src/devicemanager.h: Likewise.
	* src/freebob.cpp: Likewise.

	* src/libfreebobavc/avc_extended_cmd_generic.cpp: Give
	return value to caller. New undefined plug address
	introduced. Handling of response message is more rebust now.
	* src/libfreebobavc/avc_extended_cmd_generic.h: Likewise.
	* src/libfreebobavc/avc_extended_plug_info.cpp: Likewise.
	* src/libfreebobavc/avc_extended_stream_format.cpp: Likewise.
	* src/libfreebobavc/avc_extended_stream_format.h: Likewise.
	* src/libfreebobavc/avc_plug_info.cpp: Likewise.
	* src/libfreebobavc/avc_signal_source.cpp: Likewise.
	* src/libfreebobavc/avc_signal_source.h: Likewise.
	* src/libfreebobavc/avc_subunit_info.cpp: Likewise.